# geoinfo

./: .gitignore  LICENSE  README.md  beb
c++/: CMakeLists.txt
c++/server/: server.cpp
java/: dependency-reduced-pom.xml  pom.xml
java/src/main/java/ch/semafor/geoinfo/: CityFinder.java
java/src/main/proto/: geoinfo.proto
python/: Makefile  cityfinder_client.py  server.py
